# shift-scheduler

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: pr-title.yml
backend/: README.md  main.py  requirements.txt
backend/api/: api.py
backend/config/: aws_config.py
backend/models/inputs/: auth_inputs.py
backend/services/: cognito_service.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  routes.js  styles.css
frontend/src/contexts/: EmployeeContext.jsx  LanguageContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useClickOutside.js
frontend/src/i18n/: en.json  ja.json  pl.json  ru.json
frontend/src/pages/: AvailabilityPage.jsx  DashboardPage.jsx  NotFoundPage.jsx  ProfilePage.jsx  SettingsPage.jsx  ShiftsPage.jsx
frontend/src/themes/: helpers.js  tokens.js
frontend/src/utils/: api.js
infrastructure/: README.md  backend.tf  locals.tf  main.tf  outputs.tf  providers.tf  random.tf  variables.tf  versions.tf
infrastructure/backend/: backend-dev.tfvars.example  backend-prod.tfvars.example
infrastructure/modules/cloudfront/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/modules/cognito/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/vars/: dev.tfvars.example  prod.tfvars.example
scripts/: README.md  create_terraform_module.sh  deploy_frontend_to_s3.sh  generate_terraform_docs.sh
(+24 files in other folders)
