[project]
name = "shift-scheduler-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.116.2",
  "pydantic[email]==2.11.9",
  "pydantic-settings==2.11.0",
  "uvicorn==0.35.0",
  "mangum==0.19.0",
  "boto3==1.34.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "ruff==0.8.6",
  "pytest==8.3.4",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
