[project]
name = "shift-scheduler-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.135.1",
  "pydantic[email]==2.12.5",
  "pydantic-settings==2.13.1",
  "uvicorn==0.41.0",
  "mangum==0.21.0",
  "boto3==1.42.60",
]

[tool.setuptools.packages.find]
where = ["backend"]

[project.optional-dependencies]
dev = [
  "black==26.1.0",
  "ruff==0.15.4",
  "pytest==9.0.2",
]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
